--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "08-socket-basico",
+    "name": "socket_chat",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
@@ -10,7 +10,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.16.3",
-        "socket.io": "^2.0.4"
+        "express": "^4.17.2",
+        "socket.io": "^4.4.0"
     }
 }
